deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-deployment
  labels:
    app: ${APP_NAME}
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: ${APP_NAME}
  template:
    metadata:
      labels:
        app: ${APP_NAME}
    spec:
      containers:
        - name: ${APP_NAME}
          image: ${IMAGE_REPO}:${IMAGE_TAG}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3211
          readinessProbe:
            tcpSocket:
              port: 3211
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 12
          livenessProbe:
            tcpSocket:
              port: 3211
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "384Mi"
            limits:
              cpu: "750m"
              memory: "640Mi"
